# adventofcode2024

./: .gitignore  CMakeLists.txt  day1.cpp  day14.cpp  day2.cpp  day5.cpp  utils.cpp  utils.h
